# swagger_server/swagger/swagger.yaml
@@ -7,7 +7,7 @@ info:
 host: "teasure-hunt.herokuapp.com"
 basePath: "/v1"
 tags:
-- name: "games"
+- name: "game"
   description: "Everything about games"
 - name: "user"
   description: "Operations about user"
@@ -126,7 +126,7 @@ paths:
         "403":
           description: "Forbidden access"
       x-swagger-router-controller: "swagger_server.controllers.game_controller"
-  /game/{gameId}:
+  /game/{_id}:
     get:
       tags:
       - "game"
@@ -140,7 +140,7 @@ paths:
         in: "query"
         required: true
         type: "string"
-      - name: "gameId"
+      - name: "_id"
         in: "path"
         description: "ID of game to return"
         required: true
@@ -171,7 +171,7 @@ paths:
         in: "query"
         required: true
         type: "string"
-      - name: "gameId"
+      - name: "_id"
         in: "path"
         description: "Game id to delete"
         required: true
@@ -185,7 +185,7 @@ paths:
         "404":
           description: "Game not found"
       x-swagger-router-controller: "swagger_server.controllers.game_controller"
-  /game/{gameId}/treasures:
+  /game/{_id}/treasures:
     post:
       tags:
       - "game"
@@ -195,7 +195,7 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "gameId"
+      - name: "_id"
         in: "path"
         description: "ID of game to update"
         required: true
@@ -364,9 +364,8 @@ definitions:
     type: "object"
     required:
     - "rol"
-    - "userId"
     properties:
-      userId:
+      _id:
         type: "integer"
         format: "int64"
       username:
@@ -382,7 +381,7 @@ definitions:
     xml:
       name: "User"
     example:
-      userId: 0
+      _id: 0
       email: "email"
       rol: "user"
       username: "username"
@@ -390,10 +389,9 @@ definitions:
     type: "object"
     required:
     - "area"
-    - "gameId"
     - "treasures"
     properties:
-      gameId:
+      _id:
         type: "integer"
         format: "int64"
       name:
@@ -417,7 +415,6 @@ definitions:
     xml:
       name: "Game"
     example:
-      gameId: 0
       area:
         centerCoordinates:
         - 1.46581298050294517310021547018550336360931396484375
@@ -429,6 +426,7 @@ definitions:
       name: "name"
       description: "description"
       active: true
+      _id: 0
       treasures:
       - found:
         - "{}"
